--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -27,3 +27,19 @@ a:link:hover, a:visited:hover  {
   font-weight : bold;
   text-decoration : underline;
 }
+
+.ui-datatable {  
+    display: table; 
+}
+
+.ui-datatable table { 
+    table-layout: auto !important; 
+}
+
+td {
+    border-width: 1px !important;
+}
+
+.custom-table-header {
+    font-weight: bold;
+}
