--- a/src/main/webapp/WEB-INF/templates/template_defaut.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template_defaut.xhtml
@@ -17,18 +17,19 @@
         <div id="top" class="top">
             <ui:insert name="top">Top</ui:insert>
         </div>
-        
+
         <div>
             <div id="left">
                 <ui:insert name="left">
                     <ui:include src="menu.xhtml"/>
+                    <h:messages globalOnly="true" infoStyle="color: green;" errorStyle="color: red;" />
                 </ui:insert>
             </div>
             <div id="content" class="left_content">
                 <ui:insert name="content">Content</ui:insert>
             </div>
         </div>
-        
+
     </h:body>
 
 </html>
